[gd_scene load_steps=2 format=3 uid="uid://cnoltt4jwllxc"]

[ext_resource type="Script" path="res://scripts/system/game_manager.gd" id="1_eyj65"]

[node name="Main" type="Node2D"]
script = ExtResource("1_eyj65")

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="GameLayer" type="Node2D" parent="."]

[node name="PhaseRoot" type="Node2D" parent="GameLayer"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Audio" type="Node" parent="."]

[node name="System" type="Node" parent="."]
